完善jedis链接,优化负载均衡实现

--- a/src/main/resources/config/config.properties
+++ b/src/main/resources/config/config.properties
@@ -1,7 +1,14 @@
+#服务注册ip,为空时自动获取
 mrpc.ip=
+#netty通讯端口，不能为空
 mrpc.port=
+#服务注册的redis ip
 mrpc.redis.ip=
+#服务注册的redis port
 mrpc.redis.port=
+#服务名称，不能为空
 mrpc.serviceName=
+#注解扫描包名，不能为空,应用为springboot时无效，默认作用域为springboot
 mrpc.packageName=
+#订阅服务列表，逗号隔开，为空时代表订阅全部
 mrpc.subscribedServices=
